    TODO: Fix Provide as Mac OS X service
    TODO: Support UTIs
    TODO: Fix issue with generating icon from imageview on retina macs (IconFamily issue)
    TODO: More examples
    TODO: Retina icons in script type popup button, using xciconset
    TODO: Show command invoked when checking script syntax
    TODO: Update status item menu default icon to high res version

    * Previewing status item menu now shows actual script output instead of placeholder text
    * Status menu items can now only have a title or an icon, not both, due to changes in Mac OS X
    * Show Shell Command window now shows install status of command line tool
    * Got rid of old, low-resolution preset icons
    * New release build script
    * Platypus now requires Mac OS X 10.7 or later and a 64-bit Intel system. Older versions continue to work just fine on 32-bit 10.6 systems, and version 4.4 still works on PowerPC. But it's time to leave the past behind. It's been 9 years since the last 32-bit Mac was released.
    * "Copy icon path" option in icon contextual menu
    * Better keyboard shortcuts for built-in editor
    * Text size can be set in built-in editor
    * Proper icon temp file handling
    * Fixed issue with Open... menu item and file types in ScriptExec
    * Font size in web output view can now also be increased/reduced
    * Increased text size in built-in editor
    * Updated documentation on files installed by command line tool
    * Dynamic (in code) install path for command line tool scripts
    * Platypus-generated apps now remember font size set by user
    * Auto-focus on app name text field on app launch
    * Removed annoying smart quote substitution in built-in editor
    * Process number arguments in the format -psn_0_******* used by old version of the Finder are no longer passed to script

For 4.9
    * Users can now manually increase/decrease the font size in Platypus-generated apps